<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectedSuggestionActivity">

    <!-- hasta aca appbar -->

    <ImageButton
        android:id="@+id/ImageButtonSelectedSuggestionBackButton"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="97dp"
        android:background="@drawable/ic_baseline_chevron_left_24"
        android:contentDescription="@string/back_button"
        app:layout_constraintEnd_toStartOf="@+id/TextViewSelectedSuggestionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewSelectedSuggestionTitle"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="137dp"
        android:text="@string/category_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ImageButtonSelectedSuggestionBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewSelectedSuggestionDescription"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginTop="166dp"
        android:text="@string/activity_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImageViewSelectedSuggestionParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="329dp"
        android:layout_marginBottom="328dp"
        android:background="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/participant_amount_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewSelectedSuggestionTitle" />

    <TextView
        android:id="@+id/TextViewSelectedSuggestionParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:text="@string/participants"
        app:layout_constraintStart_toEndOf="@+id/ImageViewSelectedSuggestionParticipants"
        app:layout_constraintTop_toTopOf="@+id/ImageViewSelectedSuggestionParticipants" />

    <TextView
        android:id="@+id/TextViewSelectedSuggestionParticipantAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:text="@string/participant_amount"
        app:layout_constraintBaseline_toBaselineOf="@+id/TextViewSelectedSuggestionParticipants"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ImageViewSelectedSuggestionPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="61dp"
        android:background="@drawable/ic_baseline_attach_money_24"
        android:contentDescription="@string/price_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageViewSelectedSuggestionParticipants" />

    <TextView
        android:id="@+id/TextViewSelectedSuggestionPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:text="@string/price"
        app:layout_constraintStart_toEndOf="@+id/ImageViewSelectedSuggestionPrice"
        app:layout_constraintTop_toTopOf="@+id/ImageViewSelectedSuggestionPrice" />

    <TextView
        android:id="@+id/TextViewSelectedSuggestionPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/price_value"
        app:layout_constraintStart_toStartOf="@+id/TextViewSelectedSuggestionParticipantAmount"
        app:layout_constraintTop_toBottomOf="@+id/TextViewSelectedSuggestionParticipantAmount" />

    <ImageView
        android:id="@+id/ImageViewSelectedSuggestionRandomCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="154dp"
        android:background="@drawable/ic_baseline_format_list_bulleted_24"
        android:contentDescription="@string/random_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewSelectedSuggestionParticipants" />

    <TextView
        android:id="@+id/TextViewSelectedSuggestionRandomCategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:text="@string/category_name"
        app:layout_constraintStart_toEndOf="@+id/ImageViewSelectedSuggestionRandomCategory"
        app:layout_constraintTop_toTopOf="@+id/ImageViewSelectedSuggestionRandomCategory" />

    <Button
        android:id="@+id/ImageButtonSelectedSuggestionTryAnother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/try_another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>