<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewMainActivityTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewMainActivityParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants_amount"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="356dp" />

    <EditText
        android:id="@+id/EditTextMainActivityParticipantAmount"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:hint="@string/participant_amount_hint"
        app:layout_constraintBottom_toTopOf="@id/ButtonMainActivityStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextViewMainActivityParticipants" />

    <Button
        android:id="@+id/ButtonMainActivityStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextMainActivityParticipantAmount" />

    <TextView
        android:id="@+id/TextViewMainActivityTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ButtonMainActivityStart" />


</androidx.constraintlayout.widget.ConstraintLayout>